[package]
name = "cs-rust"
version = "0.1.0"
authors = ["harris-chris <chrisharriscjh@gmail.com>"]
edition = "2018"

[[naive]]
name = "clocksync-naive"
path = "src/bin/naive.rs"

# [[bin]]
# name = "clocksync"
# path = "src/main.rs"

[lib]
name = "clocksync_lib"
path = "src/lib/cs-lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
