[package]
name = "cs-rust"
version = "0.1.0"
authors = ["harris-chris <chrisharriscjh@gmail.com>"]
edition = "2018"

[[naive]]
name = "clocksync-naive"
path = "src/bin/naive.rs"

[[remainder]]
name = "clocksync-remainder"
path = "src/remainder.rs"

[lib]
name = "clocksync_lib"
path = "src/lib/cs_lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
num = "0.4"
structopt = "0.3"
